--- a/test.yml
+++ b/test.yml
@@ -1,32 +1,19 @@
----
-apiVersion: apps/v1beta1
-kind: Deployment
-metadata:
-  name: hello-deployment
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        run: hello-world
-    spec:
-      containers:
-      - name: hello
-        image: nginxdemos/hello:latest
-        ports:
-        - containerPort: 80
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: hello-service
-  labels:
-    run: hello-world
-spec:
-  type: NodePort
-  ports:
-  - port: 80
-    protocol: TCP
-  selector:
-    run: hello-world
+name: hello-world-example
+on:
+  push:
+jobs:
+  say-hello:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Say Hello
+        run: echo "Hello world!"
+      -
+        name: Do stuff
+        run: |
+          echo "Step 1..."
+          echo "Step 2..."
+          echo "Step 3..."
+      -
+        name: Say Goodbye
+        run: echo "Goodbye!"
