--- a/test.yml
+++ b/test.yml
@@ -1,6 +1,8 @@
 name: hello-world-example
 on:
   push:
+    branches:
+      - main  # or whatever branch you want to trigger the workflow on
 jobs:
   say-hello:
     runs-on: ubuntu-latest
